# kfs-1

./: .gitignore  .nvim.lua  .pre-commit-config.yaml  .releaserc.json  Cargo.toml  Makefile  TODO.md  rust-toolchain.toml  rustc-ice-2024-12-31T14_52_24-25991.txt  rustc-ice-2024-12-31T14_52_24-25992.txt  rustfmt.toml  target.json
.cargo/: config.toml
.github/workflows/: pull-request.yml  release.yml
arch/i386-unknown-none/grub/: grub.cfg
arch/i386-unknown-none/linker/: linker.ld
arch/i386/boot/: .bootloader.nasm  boot.nasm  multiboot.nasm
arch/i386/grub/: grub.cfg
arch/i386/linker/: linker.ld
docker/: .dockerignore  Dockerfile  Dockerfile.bak  NOTE.md
docs/: i386_boot_protocol.md
scripts/: gdb.sh  qemu.sh
src/: TODO.md  boot.rs  commun.rs  io.rs  kernel.rs  main.rs  multiboot.rs  panic.rs  qemu.rs  test.rs
src/.assets/: basic_a_80_25.txt  header.txt
src/controllers/: _ps2.rs  crtc.rs  gfxc.rs  mod.rs  ps2.rs
src/cpu/: apic.rs  gdt.rs  handlers.rs  idt.rs  mod.rs
src/cpu/apic/: madt.rs  mod.rs  rsdp.rs  rsdt.rs
src/drivers/vga/: mod.rs
src/drivers/video/: README.md  crtc.rs  gfxc.rs  mod.rs  vgac.rs  vgacon.rs
src/instructions/: cpu.rs  io.rs  mod.rs  registers.rs  tables.rs
src/io/: crtc.rs  gfxc.rs  mod.rs  ps2.rs
src/memory/: _kmem.rs  addr.rs  buddy_allocator.rs  layout.rs  mmap.rs  mod.rs
src/memory/paging/: bits.rs  mod.rs  paging.rs  pdt.rs
src/registers/: cr0.rs  cr3.rs  cr4.rs  cs.rs  ia32_efer.rs  mod.rs
src/sync/: mod.rs  once.rs  oncelock.rs
src/utils/: math.rs  mem.rs  mod.rs
