[package]
name = "kfs-1"
version = "0.1.0"
authors = ["Author Name <author@example.com>"]
edition = "2024"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bitflags = "2.6.0"

# [lib]
# name = "kfs1"
# path = "src/main.rs"
# crate-type = ["staticlib"]
#
