[package]
name = "kfs"
version = "0.1.0"
authors = ["Author Name <author@example.com>"]
edition = "2024"

# the profile used for `cargo build`
# [profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
# [profile.release]
# panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "kfs"
path = "src/kernel.rs"

[features]
default = ["log_serial"]

log_serial = []

[profile.release]
lto = true

[dependencies]
bitflags = "2.6.0"
spin = "0.9.8"

# [lib]
# name = "kfs1"
# path = "src/main.rs"
# crate-type = ["staticlib"]
#
