[package]
name = "kfs"
version = "0.1.0"
authors = ["Author Name <author@example.com>"]
edition = "2024"


[[bin]]
name = "kfs"
path = "src/kernel.rs"

[features]
default = ["log_serial"]

log_serial = []

[profile.release]
lto = true
debug = true

[dependencies]
bitflags = "2.6.0"
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

# [lib]
# name = "kfs1"
# path = "src/main.rs"
# crate-type = ["staticlib"]
#
